--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ Requests==2.31.0
 uvicorn==0.22.0
 typing-inspect==0.8.0 
 typing_extensions==4.5.0
-chromadb==0.3.25
+chromadb==0.3.26
+openai==0.27.8
