migrated to pinecone

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ typing-inspect==0.8.0
 typing_extensions==4.5.0
 chromadb==0.3.26
 openai==0.27.8
+dnspython==2.3.0
+loguru==0.7.0 
+pinecone-client==2.2.2
